--- a/Code/Web_Fundamentals/Text_Styling.html
+++ b/Code/Web_Fundamentals/Text_Styling.html
@@ -9,8 +9,8 @@
     <body>
         <div>
             <!--I want my Heading text two different colors with the background blk. -->
-            <h1>My Cloud</h1>
-            <!-- <h1 class="dif_color">Cloud</h1> -->
+            <!--Use span tag to wrap text elemnt we want to change color -->
+            <h1>My<span>Cloud</span></h1>
         </div>
         <div>
             <!-- I want the 2nd heading to have a different background color Reb. purple -->
@@ -23,4 +23,4 @@
     </body>
 </html>
 
-        
+        <!-- div*3>p*2>lorem20 -->
