--- a/Code/Web_Fundamentals/Profile-Page/Profile-Page.html
+++ b/Code/Web_Fundamentals/Profile-Page/Profile-Page.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <nav>
-        <h1>Profile</h1>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#" class="active">My Profile</a></li>
-            <li><a href="#">Find Connections</a></li>
-            <li><button class="btn">Sign Out</button></li>
-        </ul>
+        <div>
+            <h1>Profile</h1>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">My Profile</a></li>
+                <li><a href="#">Find Connections</a></li>
+            </ul>
+        </div>
+        <button class="btn">Sign Out</button>
     </nav>
     <div class="container">
         <div class="left-column">
@@ -35,30 +37,74 @@
                 </div>
             </div>
             <div class="user-info">
+                <header>
+                    <h2>Education</h2>
+                </header>
+                <div>
+                    <h3> Coding Dojo - Full Stack Bootcamp</h3>
+                    <p> June 2023 - Nov 2023 </p>
+                    <p> Triple black belt in Python, MERN, and C#...</p>
+                </div>
             </div>
         </div>
         <div class="right-column">
             <div class="main-container">
-                <header><span>2</span>Connection Requests</header>
+                <header>
+                    <div><span>2</span>Connection Requests</div>
+                </header>
                 <div class="user1">
-                    <img src="./icons/user-circle.png" alt="user-circle">
-                    <p>Todd E</p>
-                    <img src="./icons/icons/accept-circle.png" alt="accept-circle">
-                    <img src="./icons/icons/close-circle.png" alt="close-circle">
+                    <div class="left">
+                        <img src="./icons/user-circle.png" alt="user-circle">
+                        <p>Todd E</p>
+                    </div>
+                    <div class="right">
+                        <img src="./icons/icons/accept-circle.png" alt="accept-circle">
+                        <img src="./icons/icons/close-circle.png" alt="close-circle">
+                    </div>
                 </div>                
-                <div class="user2">
-                    <img src="./icons/user-circle.png" alt="user-circle">
-                    <p>Phil K</p>
-                    <img src="./icons/icons/accept-circle.png" alt="accept-circle">
-                    <img src="./icons/icons/close-circle.png" alt="close-circle">
+                <div class="user1">
+                    <div class="left">
+                        <img src="./icons/user-circle.png" alt="user-circle">
+                        <p>Phil K</p>
+                    </div>
+                    <div class="right">
+                        <img src="./icons/icons/accept-circle.png" alt="accept-circle">
+                        <img src="./icons/icons/close-circle.png" alt="close-circle">
+                    </div>
                 </div>                
             </div>
             <div class="main-container2">
-                </table>
+                <header>
+                    <div><span>500+</span>Your Connections</div>
+                </header>
+                <div class="user1">
+                    <div class="left">
+                        <img src="./icons/user-circle.png" alt="user-circle">
+                        <p>Adrian S</p>
+                    </div>
+                </div>
+                <div class="user1">
+                    <div class="left">
+                        <img src="./icons/user-circle.png" alt="user-circle">
+                        <p>Mike B</p>
+                    </div>
+                </div>
+                <div class="user1">
+                    <div class="left">
+                        <img src="./icons/user-circle.png" alt="user-circle">
+                        <p>Steve P</p>
+                    </div>
+                </div>
+                <div class="user1">
+                    <div class="left">
+                        <img src="./icons/user-circle.png" alt="user-circle">
+                        <p>Juliette S</p>
+                    </div>
+                </div>
+                <hr>
+                <a href="#" class="viewMore"> View More</a>
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </body>
 </html>
