--- a/Code/Web_Fundamentals/JavaScript/videoPreview/video-preview/index.html
+++ b/Code/Web_Fundamentals/JavaScript/videoPreview/video-preview/index.html
@@ -27,7 +27,8 @@
         <div class="col-l">
 
             <!-- this is a placeholder replace it with a real video -->
-            <video src="./assets/pexels-polina-kovaleva-7587012-2160x3840-30fps.mp4" id="myVideo">
+            <video width="320" height="240" controls id="video" onmouseover="over(this)" onmouseout="out(this)" muted>
+                <source src="./assets/pexels-polina-kovaleva-7587012-2160x3840-30fps.mp4" type="video/mp4">
             </video>
             <!-- video info -->
             <div class="row">
