--- a/Code/Web_Fundamentals/JavaScript/exam.js/exam.html
+++ b/Code/Web_Fundamentals/JavaScript/exam.js/exam.html
@@ -65,15 +65,17 @@
                 <img src="./images/assets/sempervivum-s.jpg" alt="sempervivum-s"> Sempervivum
             </p>
         </div>
+        <div class="cookieContainer">
+            <div class="bottom" id="alert" style="left: 130px">
+                This site makes use of third-party cookies, by clicking "i accept" you agree to the terms outlined in our <a href="#">cookie policy</a>
+                <button onclick="remove('alert')">
+                    I Accept
+               </button>
+            </div>
+        </div>
     </div>
     <!-- Cookie popup -->
     <!-- stackoverflow -->
-    <div class="bottom" id="alert" style="left: 130px">
-        This site makes use of third-party cookies, by clicking "i accept" you agree to the terms outlined in our <a href="#">cookie policy</a>
-        <button onclick="remove('alert')">
-            I Accept
-       </button>
-      </div>
     <script src="./exam.js"></script>
 </body>
 </html>
