--- a/Code/Portfolio/Portfolio.html
+++ b/Code/Portfolio/Portfolio.html
@@ -107,7 +107,7 @@
                                 </li>
                                 <li><img src="./imgs/7376627E-AD6E-443A-B414-501F1EEB1F37.jpg" alt="#"></li>
                                 <li><img src="./imgs/C2814D59-1629-4CB8-9C58-B837A3722F5F.jpg" alt="#"></li>
-                                <li><img src="./imgs/Screenshot 2023-06-27 150359.jpg" alt="#"></li>
+                                <li><img src="./imgs/Wleding.jpg" alt="#"></li>
                                 <li><img src="./imgs/IMG_0158.jpg" alt="#"></li>
                                 <li><img src="./imgs/./IMG_2321.jpg" alt="#"></li>
                             </ul>
@@ -188,14 +188,14 @@
             </div>
             <div class="Projects-container" id="project-section">
                 <h2>Projects</h2>
-                <!-- slider------------->
+                <!------------slider------------->
                 <ul id="autoWidth" class="cs-hidden" style="display: flex;">
-                    <!-- -----------1------------- -->
+                    <!-------------1--------------->
                     <li class="item-a">
                         <div class="box">
                             <p class="Profile-page">Profile Page</p>
                             <!-- Project -->
-                            <img src="./imgs/Screenshot 2023-06-29 123527.jpg" class="project">
+                            <img src="./imgs/Profile_Page.jpg" alt="profile-page" class="project">
                             <!-- Technologies used  -->
                             <div class="tech-used">
                                 <div class="tech-icons">
@@ -210,12 +210,12 @@
                             </div>
                         </div>
                     </li>
-                    <!-- -----------2------------- -->
+                    <!-------------2--------------->
                     <li class="item-a">
                         <div class="box">
                             <p class="Profile-page">Likes Button</p>
                             <!-- Project -->
-                            <img src="./imgs/Screenshot 2023-06-29 233431.jpg" class="project">
+                            <img src="./imgs/Likes.jpg" alt="likes-btn" class="project">
                             <!-- Technologies used  -->
                             <div class="tech-used">
                                 <div class="tech-icons">
@@ -234,7 +234,7 @@
                 <!-- slider box -->
             </div>
         </div>
-        <!------------------Contact Me------------------------------>
+        <!-----------------Contact Me------------------------------>
         <div class="contactMe-container" id="contact-me">
             <div class="container">
                 <div class="row">
@@ -251,9 +251,9 @@
                         <a href="#" download class="btn btn2">Download CV</a>
                     </div>
                     <div class="contact-right">
-                        <form action="">
-                            <input type="text" name="Name" placeholder="Your Name" id="" required>
-                            <input type="email" name="email" placeholder="Your Email" id="" required>
+                        <form>
+                            <input type="text" name="Name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
                             <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                             <button type="submit" class="btn btn2">Submit</button>
                         </form>
@@ -262,7 +262,7 @@
             </div>
         </div>
     </main>
-    <script src="./portfolio.js" type="text/javascript"></script>
+    <script src="./portfolio.js"></script>
     <!-- BootStrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
