--- a/Code/Portfolio/Portfolio.html
+++ b/Code/Portfolio/Portfolio.html
@@ -157,10 +157,10 @@
                             <img src="./icons/Python-1024x1024.png" alt="python">
                             <p>Python</p>
                         </div>
-                        <div>
+                        <!-- <div>
                             <img src="./icons/jquery-course-icon.svg" alt="jquery">
                             <p>Jquery</p>
-                        </div>
+                        </div> -->
                         <div>
                             <img src="./icons/nodejs-course-icon.svg" alt="nodeJS">
                             <p>Node.JS</p>
